style.css
@import url("https://use.typekit.net/cpw6jin.css");

:root {
  --shadow-color: 0deg 0% 0%;
  --shadow-elevation-medium: 0.3px 0.5px 0.6px hsl(var(--shadow-color) / 0.31),
    1.3px 2.7px 2.9px -1.8px hsl(var(--shadow-color) / 0.25),
    6.3px 12.5px 13.5px -3.5px hsl(var(--shadow-color) / 0.19);

  --primary: #225ce3;
  --neutral-100: #ffefca;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
body {
  font-family: adobe-garamond-pro, serif;
  background-color: var(--neutral-100);

  min-height: 100vh;
}

li {
  list-style: none;
  transition: 0.5 all ease;
  color: black;
  transition: all 0.2s ease;
}

header,
ul {
  display: flex;
}

ul {
  justify-content: space-around;
  align-items: center;
  color: white;
  font-size: 1.5rem;
  padding: 1rem;
}

a {
  text-decoration: none;
  color: black;
  font-size: 1rem;
  transition: all 0.2s ease;
}
a:visited {
  color: black;
  transition: all 0.2s ease;
}

li:hover {
  scale: 1.1;
}

li:hover a:visited {
  color: var(--primary);
}
li:hover a {
  color: var(--primary);
}

.contact-links {
  width: 50%;
}

.header {
  padding: 1rem;
  width: 50%;
  font-size: 1.2rem;
}

.headerSpan {
  font-size: 1.5rem;
  color: var(--primary);
}

h1 {
  font-weight: 400;
  font-size: 14rem;
  text-align: right;
  margin-right: 2rem;
}

.main-image {
  width: 450px;
  height: 450px;
  object-fit: cover;
  border-radius: 50%;
  border: 3px solid black;
  position: absolute;
  top: 40%;
  left: 10%;
}

.startAnimation {
  animation: MainImageAppear 2s ease forwards;
}

.main-image,
.secondary1,
.secondary2 {
  transition: all 0.3s ease-in-out;
}

.main-image:hover,
.secondary1:hover,
.secondary2:hover {
  transform: scale(1.1);
  filter: grayscale(0);
}

img {
  filter: grayscale(30%);
}

.secondary1,
.secondary2 {
  width: 200px;
  height: 200px;
  object-fit: cover;
  border-radius: 50%;
  border: 3px solid black;
  position: absolute;
  animation-delay: 0.5s;
}

.secondary1 {
  top: 42%;
  left: 32%;
  opacity: 0;
}

.secondary2 {
  top: 66%;
  left: 32%;
  opacity: 0;
}

.text-contact {
  gap: 0.5rem;
  /* border: solid 1px black ;  */
  display: flex;
  /* flex-direction: column; */
  align-items: center;
  font-size: 1rem;
  width: 42ch;
  letter-spacing: 0.2rem;
  /* text-align: center; */
  text-justify: inter-word;
  position: absolute;
  bottom: 10%;
  left: 76%;
}

.qrcode {
  width: 120px;
  height: 120px;
  object-fit: cover;
}

@keyframes MainImageAppear {
  0% {
    opacity: 0;
    transform: translateX(-100px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@media only screen and (max-width: 600px) {
  a {
    font-size: 1.1rem;
  }

  body {
    height: 100vh;
  }

  h1 {
    margin: 3rem 0 0 0;
    text-align: left;
    font-size: 7rem;
    line-height: 4rem;
    width: 100%;
  }

  .headerName {
    color: var(--primary);
  }
  .header {
    display: none;
  }

  .main-image {
    width: 100vw;
    height: 100vw;
    left: 0;
    filter: grayscale(0);
    top: 42%;
  }

  .main-image:hover {
    transform: none;
    filter: none;
  }

  .secondary1,
  .secondary2 {
    width: 150px;
    height: 150px;
    top: 90%;
    filter: grayscale(0);
  }
  .secondary1{
    left: 5%;
  }
  .secondary2 {
    left: 55%;
  }
  ul {
    margin-top: 1.5rem;
    width: 100vw;
    padding: 0;
    flex-wrap: wrap;
    justify-content: center;
  }
  ul > li {
    flex-basis: 25%;
    padding-left: 1rem;
  }

  .text-contact {
    display: none;
  }
}

